--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
         var jsonFile = "en.json";
         var tlFile = "tl_en.json";
         $(document).ready(function () {
+            var progressbar = $("#progress"),
+                progressLabel = $(".progress-label");
+            $("#progress").progressbar({
+                value: false,
+                change: function () {
+                    progressLabel.text("Finished with "+progressbar.progressbar("value") + "%");
+                },
+                complete: function () {
+                    progressLabel.text("Complete! HF!");
+                }
+            });
+            $("#progress").progressbar("enable");
             /**
                 Get the current site
             **/
@@ -225,29 +237,29 @@
             /**
                 Fade in loaded contents withouth jquery-ui
             **/
-            $("#progress").progressbar();
-            $("#progress").progressbar("enable");
+
             $("#progress").progressbar("option", "value", 0);
             $("#showContent").show("slide", {
                 direction: "right"
             }, 1000, function () {
                 $("#progress").progressbar("option", "value", 25);
-                $("#news").hide("explode", {
 
-                }, 500, function () {
-                    $("#progress").progressbar("option", "value", 35);
-                    $("#menu").show("shake", {
-                        times: 5,
-                        distance: 20
+                $("#progress").progressbar("option", "value", 35);
+                $("#menu").show("shake", {
+                    times: 5,
+                    distance: 20
+                }, "easeInExpo", function () {
+
+                    $("#progress").progressbar("option", "value", 50);
+                    $("#scroller").show("drop", {
+                        direction: "right"
                     }, "easeInExpo", function () {
+                        $("#progress").progressbar("option", "value", 75);
+                        $("#impressum").show("slide", {
+                            direction: "down"
+                        }, 500, function () {
+                            $("#news").hide("explode", {
 
-                        $("#progress").progressbar("option", "value", 50);
-                        $("#scroller").show("drop", {
-                            direction: "right"
-                        }, "easeInExpo", function () {
-                            $("#progress").progressbar("option", "value", 75);
-                            $("#impressum").show("slide", {
-                                direction: "down"
                             }, 500, function () {
                                 $("#progress").progressbar("option", "value", 100);
                                 $("#progress").hide("pulsate", {}, 800, function () {});
@@ -396,7 +408,7 @@
 
 <body style="background-color: black" id="body">
     <a id="onTop"></a>
-    <div id="progress" style="background-color: red; width: 80%; height: 15%; margin-left: 10%; margin-top: 15%; position: fixed;"></div>
+    <div id="progress" style="background-color: red; width: 80%; height: 15%; margin-left: 10%; margin-top: 15%; position: fixed; background-image: url(images/progress.jpg); opacity: 0.7; color: green;"><div class="progress-label" style="color: green; text-align: center;">Howdy</div></div>
     <div id="scroller" style="display:none">
         <div id="toc"></div>
         <div id="top">
