--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             $("#progress").progressbar({
                 value: false,
                 change: function () {
-                    progressLabel.text("Finished with "+progressbar.progressbar("value") + "%");
+                    progressLabel.text("Finished with " + progressbar.progressbar("value") + "%");
                 },
                 complete: function () {
                     progressLabel.text("Complete! HF!");
@@ -326,6 +326,45 @@
                         );
                     }
                 });
+                $("#impressum").tooltip({
+                    track: false,
+                    items: "a",
+                    fixed: true,
+                    position: {
+                        my: "center bottom-5",
+                        at: "center top"
+                    },
+                    content: function () {
+                        var element = $(this);
+                        var text = element.text();
+
+                        return '<iframe style="width:300px; height:400px; border: 0px solid black; background-color: none;" frameborder="0" scrolling="no" src="http://skamster.github.io/gpl-2.0.txt" ></iframe>';
+
+                    },
+                    open: function (event, ui) {
+
+                        ui.tooltip.animate({
+                            top: ui.tooltip.position().top
+                        }, "fast");
+                    },
+                    close: function (event, ui) {
+                        ui.tooltip.hover(
+                            function () {
+
+                                $(this).stop(true).fadeTo(400, 1);
+
+                                //.fadeIn("slow"); // doesn't work because of stop()
+                            },
+                            function () {
+
+                                $(this).fadeOut("2000", function () {
+                                    $(this).remove();
+                                })
+
+                            }
+                        );
+                    }
+                });
                 $(document).tooltip({
                     track: true,
                     items: "img, [title]",
@@ -393,12 +432,13 @@
             $.browser.chrome = /chrom(e|ium)/.test(navigator.userAgent.toLowerCase());
             $.browser.webkit = /webkit/.test(navigator.userAgent.toLowerCase());
 
+            // relativ ugly workaround for font-size-failures i saw. my reference is firefox with 0.8.
+            if ($.browser.webkit) {
+                $(".btn").css("font-size", "0.75em");
+            }
             if ($.browser.chrome) {
                 $(".btn").css("font-size", "0.7em");
 
-            }
-            if ($.browser.webkit) {
-                $(".btn").css("font-size", "0.75em");
             }
 
 
@@ -408,7 +448,9 @@
 
 <body style="background-color: black" id="body">
     <a id="onTop"></a>
-    <div id="progress" style="background-color: red; width: 80%; height: 15%; margin-left: 10%; margin-top: 15%; position: fixed; background-image: url(images/progress.jpg); opacity: 0.7; color: green;"><div class="progress-label" style="color: green; text-align: center;">Howdy</div></div>
+    <div id="progress" style="background-color: red; width: 80%; height: 15%; margin-left: 10%; margin-top: 15%; position: fixed; background-image: url(images/progress.jpg); opacity: 0.7; color: green;">
+        <div class="progress-label" style="color: green; text-align: center;">Howdy</div>
+    </div>
     <div id="scroller" style="display:none">
         <div id="toc"></div>
         <div id="top">
