--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                         var element = $(this);
                         var text = element.text();
 
-                        return '<iframe style="width:300px; height:400px; border: 0px solid black; background-color: none;" frameborder="0" scrolling="no" src="http://skamster.github.io/gpl-2.0.txt" ></iframe>';
+                        return '<iframe style="width:570px; height:550px; border: 0px solid black; background-color: white;" frameborder="no" scrolling="yes" src="gpl-2.0.txt" ></iframe>';
 
                     },
                     open: function (event, ui) {
@@ -448,7 +448,7 @@
 
 <body style="background-color: black" id="body">
     <a id="onTop"></a>
-    <div id="progress" style="background-color: red; width: 80%; height: 15%; margin-left: 10%; margin-top: 15%; position: fixed; background-image: url(images/progress.jpg); opacity: 0.7; color: green;">
+    <div id="progress" style="background-color: red; width: 80%; height: 15%; margin-left: 10%; margin-top: 15%; position: fixed; background-image: url(images/progress.jpg); opacity: 0.85; color: green;">
         <div class="progress-label" style="color: green; text-align: center;">Howdy</div>
     </div>
     <div id="scroller" style="display:none">
