--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                         var element = $(this);
                         var text = element.text();
 
-                        return '<iframe style="width:300px; height:400px; border: 0px solid black; background-color: none;" frameborder="0" scrolling="no" src="http://tile.stamen.com/toner/#12/46.9407/7.4676" ></iframe>';
+                        return '<iframe style="width:550px; height:400px; border: 0px solid black; background-color: none;" frameborder="0" scrolling="no" src="http://tile.stamen.com/toner/#12/46.9407/7.4676" ></iframe>';
 
                     },
                     open: function (event, ui) {
@@ -329,6 +329,7 @@
                 $("#impressum").tooltip({
                     track: false,
                     items: "a",
+                    tooltipClass: "custom-tooltip-styling",
                     fixed: true,
                     position: {
                         my: "center bottom-5",
@@ -448,7 +449,7 @@
 
 <body style="background-color: black" id="body">
     <a id="onTop"></a>
-    <div id="progress" style="background-color: red; width: 80%; height: 15%; margin-left: 10%; margin-top: 15%; position: fixed; background-image: url(images/progress.jpg); opacity: 0.85; color: green;">
+    <div id="progress" style="background-color: red; width: 80%; height: 15%; margin-left: 10%; margin-top: 15%; position: fixed; background-image: url(images/progress.jpg); opacity: 0.90; color: green;">
         <div class="progress-label" style="color: green; text-align: center;">Howdy</div>
     </div>
     <div id="scroller" style="display:none">
