--- a/index.html
+++ b/index.html
@@ -473,11 +473,13 @@
                     $("#menuButton").css("top", "0%");
                     $("#showContent").css("margin-top", "0%");
                     $("#showContent").css("top", "0%");
+                    $(".anchor").css("top", "-20px");
                     $("#scroller").css("top", "2%");
                     $("#tocButton").css("top", "2%");
                     $("#tocButton").css("height", "55%");
                     $("#scroller").css("height", "95%");
                 } else {
+                    $(".anchor").css("top", "-120px");
                     $("#menu").css("display", "block");
                     $("#menuButton").css("top", "13%");
                     $("#menuButton").html("&uarr;");
