--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     <script src="js/jquery.vticker.js" type="text/javascript"></script>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
-    <link title="Example3" rel="alternate stylesheet" type="text/css" href="stylesheets/thirdCase.css" media="screen" />
-    <link title="Serious" rel="stylesheet" type="text/css" href="stylesheets/serious.css" media="screen" />
-    <link title="Spaced" rel="alternate stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+
+    <link title="Serious Flat" rel="stylesheet" type="text/css" href="stylesheets/seriousFlat.css" media="screen" />
 
     <link rel="stylesheet" type="text/css" href="stylesheets/jquery.zrssfeed.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui.css" media="screen" />
@@ -535,11 +534,8 @@
     <header>
 
         <div style="display: none;" id="menu">
-            <div style="display:block;">
-                <h1 style="display: inline;">skamster.github.io</h1>
-                <p style="display: inline; vertical-align: top;">projects, docs and personal infos
-
-                </p>
+            <div class="logo">
+                <h1>skamster.github.io</h1>
             </div>
             <div class="menuelements">
                 <div id="menucontent">
